# Project-in-Fastapi

./: Dockerfile  README.md  alembic.ini  app.py  compose.yaml  entrypoint.sh  models.py  pyproject.toml  schemas.py  security.py  settings.py
migrations/: env.py
migrations/versions/: 13baa4e4749d_set_up_updated_at_time_in_table.py  2e13941692f5_update_a_add_created_and_update_time_in_.py  3bd64255a61f_revision_migrations.py  43b4d04a06ed_create_todos_table.py  75ae3ab1ecf8_update_a_add_created_and_update_time_in_.py  bbd859da7c06_set_up_updated_at_time_in_table.py  d91f68f282c8_revision_again_migrations.py  e2ffbdfd7cee_update_time_in_table.py  f154cf502b97_create_new_todos_table.py  f2974f51546c_update_a_new_time_in_table.py
routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py
zero_aula/: app.py
