[tool.poetry]
name = "zero_aulas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.1"
pydantic = {extras = ["email"], version = "^2.8.2"}
sqlalchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"
psycopg = {extras = ["binary"], version = "^3.2.1"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
poethepoet = "^0.27.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pyjwt = "^2.9.0"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}
python-multipart = "^0.0.9"
factory-boy = "^3.3.0"
freezegun = "^1.5.1"

[tool.poe.tasks]
run = "fastapi dev ./app.py"
format  = 'ruff check . --fix && ruff format .'
test ='pytest --cov= ./ -vv'
post_test = 'coverage html'

[tool.ruff]
line-length =85
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[tool.ruff.format]
preview = true
quote-style ='single'

[tool.pytest.ini_options]
pythonpath ="."
addopts = '-p no:warnings'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
